# openvino.genai-public

./: .gitignore  README.md  pyproject.toml  requirements-build.txt
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/workflows/: causal_lm_cpp.yml  genai_package.yml  genai_python_lib.yml  linux.yml  llm.yml  llm_cpp.yml  mac.yml  windows.yml
image_generation/lcm_dreamshaper_v7/cpp/scripts/: requirements.txt
image_generation/stable_diffusion_1_5/cpp/scripts/: requirements.txt
llm/cpp/: CMakeLists.txt  README.md  convert_tokenizers.py  group_beam_searcher.hpp  llm.cpp
samples/: CMakeLists.txt  deployment-requirements.txt  export-requirements.txt
samples/c/text_generation/: chat_sample_c.c
samples/cpp/omni/: omni.cpp
samples/cpp/omni_chat/: CMakeLists.txt  README.md  omni_chat.cpp
samples/cpp/video_generation/: text2video.cpp
samples/cpp/visual_language_chat/: visual_language_chat.cpp
src/c/include/openvino/genai/c/: llm_pipeline.h
src/c/src/: llm_pipeline.cpp
src/cpp/: CMakeLists.txt
src/cpp/include/openvino/genai/: continuous_batching_pipeline.hpp
src/cpp/include/openvino/genai/omni/: README.md  (+7 more)
src/cpp/src/: continuous_batching_impl.cpp  continuous_batching_pipeline.cpp  llm_pipeline.cpp  sampler.cpp  tokenizer.cpp  utils.cpp
src/cpp/src/visual_language/: vlm_config.cpp
src/cpp/src/visual_language/phi3_vision/: classes.cpp
src/python/: CMakeLists.txt
tests/python_tests/: requirements.txt  test_tokenizer.py
text_generation/causal_lm/cpp/: CMakeLists.txt  beam_search_causal_lm.cpp  causal_lm.cpp
